@@ -139,6 +139,9 @@ how the string is interpreted.  For example, use
 </PRE>
 to set the <CODE>mail.pop3.port</CODE> property, which is of type int.
 <P>
+Note that if you're using the "pop3s" protocol to access POP3 over SSL,
+all the properties would be named "mail.pop3s.*".
+<P>
 <TABLE BORDER>
 <TR>
 <TH>Name</TH>
@@ -234,6 +237,18 @@ Defaults to false.
 </TR>
 
 <TR>
+<TD>mail.pop3.socketFactory</TD>
+<TD>SocketFactory</TD>
+<TD>
+If set to a class that implements the
+<code>javax.net.SocketFactory</code> interface, this class
+will be used to create POP3 sockets.  Note that this is an
+instance of a class, not a name, and must be set using the
+<code>put</code> method, not the <code>setProperty</code> method.
+</TD>
+</TR>
+
+<TR>
 <TD>mail.pop3.socketFactory.class</TD>
 <TD>String</TD>
 <TD>
@@ -256,6 +271,38 @@ Defaults to true.
 
 <TR>
 <TD>mail.pop3.socketFactory.port</TD>
+<TD>int</TD>
+<TD>
+Specifies the port to connect to when using the specified socket
+factory.
+If not set, the default port will be used.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.pop3.SSLSocketFactory</TD>
+<TD>SSLSocketFactory</TD>
+<TD>
+If set to a class that extends the
+<code>javax.net.ssl.SSLSocketFactory</code> class, this class
+will be used to create POP3 SSL sockets.  Note that this is an
+instance of a class, not a name, and must be set using the
+<code>put</code> method, not the <code>setProperty</code> method.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.pop3.SSLSocketFactory.class</TD>
+<TD>String</TD>
+<TD>
+If set, specifies the name of a class that extends the
+<code>javax.net.ssl.SSLSocketFactory</code> class.  This class
+will be used to create POP3 SSL sockets.
+</TD>
+</TR>
+
+<TR>
+<TD>mail.pop3.SSLSocketFactory.port</TD>
 <TD>int</TD>
 <TD>
 Specifies the port to connect to when using the specified socket
